# Warsaw_buses

./: MANIFEST.in  README.md  requirements.txt  run_data_analysis_sample_usage.ipynb  setup.cfg
Warsaw_buses/: __init__.py  collect_buses.py  collect_timetables.py  run_data_analysis.py
Warsaw_buses/collect_data/: collect_timetables.py
Warsaw_buses/process_data/: __init__.py  filter_data.py  punctuality_analysis.py  speed_analysis.py  utils.py
collect_data/: collect_timetables.py
data_io/: __init__.py  collect_busestrams.py  collect_data.py  query_data.py  validate_data_correctness.py
notebooks/: collect_data_sample_usage.ipynb  run_data_analysis_sample_usage.html  run_data_analysis_sample_usage.ipynb
process_data/: __init__.py  punctuality_analysis.py  utils.py  velocity_analysis.py
tests/: __init__.py  test_collect_data.py  test_punctuality_analysis.py  test_speed_analysis.py  test_velocity_analysis.py  utils.py
tests/test_punctuality_analysis_data/: stops_coord.json
tests/test_punctuality_analysis_data/calc_delays/: delays
tests/test_punctuality_analysis_data/delays_statistics/: delays_statistics_output.txt
tests/test_punctuality_analysis_data/dist_bus_from_stop/busestrams_delay_1/: results.txt
tests/test_punctuality_analysis_data/dist_bus_from_stop/busestrams_delay_2/: results.txt
tests/test_punctuality_analysis_data/dist_bus_from_stop/busestrams_perfect_punctuality/: results.txt
tests/test_speed_analysis_data/exceeding_locations/: exceeding_locations_dict
tests/test_speed_analysis_data/speed_statistics/: statistics_output.txt
(+241 files in other folders)
