[metadata]
name = Warsaw_buses
version = 0.0.1
author = Piotr Grabysz
author_email = p.grabysz@gmail.com
description = A package for analysing speed and punctuality of Warsaw buses
url = https://gitlab.uw.edu.pl/p.grabysz/final-assignment
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License

[options]
packages = find:

[options.entry_points]
console_scripts =
    run_data_analysis = Warsaw_buses.run_data_analysis:main

