[metadata]
name = Warsaw_buses
version = 0.0.1
author = Piotr Grabysz
author_email = p.grabysz@gmail.com
description = A package for analysing speed and punctuality of Warsaw buses
url = https://gitlab.uw.edu.pl/p.grabysz/final-assignment
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License

[options]
packages = find:
install_requires =
    pytest>=6.2.2
    numpy>=1.19.2
    pandas>=1.2.1
    requests>=2.25.1
    matplotlib>=3.3.2
python_requires = >=3.8
setup_requires = setuptools>=51.3.3
tests_require = pytest

[options.entry_points]
console_scripts =
    run_data_analysis = Warsaw_buses.run_data_analysis:main
    collect_buses = Warsaw_buses.collect_buses:main
    collect_timetables = Warsaw_buses.collect_timetables:main

